Package all java runtime files